# exchangerates

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker.yml
src/: api.rs  data.rs  main.rs
