[package]
name = "exchangerates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8.3"
futures = "0.3.28"
log = "0.4.20"
poem = { version = "1.3.58", features = ["anyhow"] }
poem-openapi = { version = "3.0.5", features = ["chrono"] }
pretty_env_logger = "0.5.0"
quick-xml = { version = "0.30.0", features = ["serialize"] }
reqwest = { version = "0.11.22", features = ["rustls-tls", "stream"] }
serde = "1.0.189"
tokio = { version = "1.33.0", features = ["full"] }
