[package]
name = "exchangerates"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8.3"
futures = "0.3.28"
log = "0.4.20"
poem = { version = "1.3.58", features = ["anyhow"] }
poem-openapi = { version = "3.0.5", features = ["chrono"] }
pretty_env_logger = "0.5.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = "1.0.189"
tokio = { version = "1.33.0", features = ["full"] }

[dependencies.reqwest]
version = "0.11.22"
default-features = false
features = ["rustls-tls"]
